# NovaCL

./: .prettierignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: dev_build.yml  publish_build.yml
docs/: CODE_OF_CONDUCT
docs/Coding Standards/: File Naming Specifications.md  Folder Classification Specifications.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/download/: error.rs  manager.rs  mod.rs  task.rs
src-tauri/src/network/: client.rs  error.rs  mod.rs
src/api/: Download.ts  Network.ts
src/assets/: main.css
src/components/: BlurBackground.vue  Card.vue  DownloadManager.vue  LogoLoader.vue  Nav.vue  ScrollableView.vue  SearchBar.vue  ViewSwitch.vue  index.ts
src/components/Common/: Card.vue
src/components/Loader/: LogoLoader.vue  LogoLoaderLogo.vue
src/components/Nav/: Nav.vue  NavButton.vue
src/modules/: ClientVersions.ts  index.ts
src/modules/vue/: VueRouter.ts
src/pages/: Downloads.vue  Home.vue  More.vue  Settings.vue  index.ts
src/router/: index.ts
src/stores/: ClientJarMetadata.ts  index.ts
src/styles/: main.css  tailwind.css
src/types/: Client.ts  DownloadComp.ts  Nav.ts  ViewSwitch.ts
src/utils/: EnvironmentInit.ts  VersionImage.ts  WebRequestConstant.ts  index.ts
src/views/: Download.vue  DownloadClientJar.vue  DownloadComp.vue  Home.vue  More.vue  Settings.vue  index.ts
(+1 files in other folders)
